# iot-hub

./: .gitignore  AUTHORS.md  README.md  conanfile.py  meson.build
config/: wiregate-config.json  wiregate-web.json  wiregate-web.json.license
docs/: class-diagram-abstractions.md  class-diagram-concept.md  class-diagram-entities.md  project-structure.md
src/: meson.build
src/cli/: meson.build
src/cli/src/: main.cpp
src/core/: meson.build
src/core/include/: logger.h
src/core/src/: logger.cpp
src/gui/: meson.build
src/gui/src/: main.cpp
src/gui/web/: index.html
src/gui/web/assets/: app.js  styles.css
src/ipc/: meson.build
src/ipc/include/: IpcClient.h  IpcMessage.h  IpcProtocol.h  IpcServer.h  IpcSession.h
src/ipc/src/: IpcClient.cpp  IpcMessage.cpp  IpcProtocol.cpp  IpcServer.cpp  IpcSession.cpp
src/service/: meson.build
src/service/include/: Device.h  DevicePoolModule.h  DeviceRegistry.h  IpcServiceModule.h  Service.h  WireGateService.h
src/service/src/: Device.cpp  DevicePoolModule.cpp  DeviceRegistry.cpp  IpcServiceModule.cpp  Service.cpp  WireGateService.cpp  main.cpp
tests/: meson.build
tools/: build.sh  cli-launcher.template  launcher.template  web-launcher.template
tools/profiles/: profile.default
