# SPDX-FileCopyrightText: 2026 Daryna Vasylchenko (KernelNova) <daryna.vasylchenko@gmail.com>
# SPDX-License-Identifier: GPL-3.0-or-later


subdir('core')    # Core library with common functionality
subdir('ipc')     # Inter-process communication components

subdir('service') # This is the main service implementation
subdir('cli')     # Command-line interface for interacting with the service
subdir('gui')     # Web-based graphical interface for interacting with the service